# week6_exercises

./: .gitignore  README.md
Timing/: CMakeLists.txt
Timing/source/: CMakeLists.txt  main.cpp
code_fix/: main  main.cpp  valgrindTest  valgrindTest.cpp
